# fashion_retrieval_system

./: .env.example  .gitignore  DETAILED_PROJECT_DOCUMENTATION.md  HOW_TO_RUN.md  PROJECT_WORKFLOW.md  README.md  dataset_eval_results.json  golden_eval_results.json  pyproject.toml  requirements.txt
configs/: config.yaml  evaluation_queries.json  golden_dataset.json  models.yaml
data/images/: .gitkeep
scripts/: __init__.py  build_index.py  check_versions.py  download_models.py  evaluate.py  evaluate_retrieval.py  run_evaluation_queries.py  search_cli.py  smoke_test.py  test_models.py  test_one_image.py
src/: __init__.py  qdrant_store.py  schemas.py  vocab.py
src/embeddings/: __init__.py  fashionclip_embedder.py  text_embedder.py
src/indexing/: __init__.py  _image_loader.py  indexer.py  staged_indexer.py
src/retrieval/: __init__.py  metrics.py  query_parser.py  reranker.py  retriever.py
src/utils/: __init__.py  config_loader.py  helpers.py  logging_config.py
src/vlm/: __init__.py  caption_generator.py  metadata_extractor.py  vlm_backend.py
tests/: __init__.py  test_config_loader.py  test_helpers.py  test_metadata_extractor.py  test_qdrant_filter.py  test_reranker.py  test_retrieval_metrics.py  test_schemas.py
