[project]
name = "fashion-retrieval-system"
version = "1.0.0"
description = "Multimodal Fashion Image Retrieval System — Glance ML Internship"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Core ---
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # --- Vector Database ---
    "qdrant-client>=1.9.0",

    # --- Deep Learning ---
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.43.0",
    "accelerate>=0.31.0",
    "sentencepiece>=0.2.0",
    "qwen-vl-utils>=0.0.8",

    # --- Embeddings & Reranking ---
    "sentence-transformers>=3.0.0",
    "open-clip-torch>=2.24.0",

    # --- Image Processing ---
    "Pillow>=10.3.0",

    # --- Utilities ---
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",

    # --- API (Phase 2) ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # For FastAPI test client
]

[project.scripts]
build-index = "scripts.build_index:main"
search = "scripts.search_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Use --index-url for CUDA wheels if needed:
# uv sync --extra-index-url https://download.pytorch.org/whl/cu121
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
